Create the top nav bar

--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -5,6 +5,14 @@
     </head>
 
     <body>
+
+        <div class="topnav">
+            <a class="active" href="#About me">About me</a>
+            <a class="active" href="#Skills">Skills</a>
+            <a class="active" href="#Projects">Projects</a>
+            <a class="active" href="#Recommendations">Recommendations</a>
+        </div>
+
         <h1>Alexis Alfaro</h1>
         <h2>About me</h2>
         <h2>Skills</h2>
