--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -7,13 +7,13 @@
     <body>
 
         <div class="topnav">
+            <a>Alexis Alfaro</a>
             <a class="active" href="#About me">About me</a>
             <a class="active" href="#Skills">Skills</a>
             <a class="active" href="#Projects">Projects</a>
             <a class="active" href="#Recommendations">Recommendations</a>
         </div>
 
-        <h1>Alexis Alfaro</h1>
         <h2>About me</h2>
         <h2>Skills</h2>
         <h2>Projects</h2>
