Add the about me section and style the image

--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -13,8 +13,14 @@
             <a class="active" href="#Projects">Projects</a>
             <a class="active" href="#Recommendations">Recommendations</a>
         </div>
-
+        
         <h2>About me</h2>
+        <img class="profile" src="https://historia-arte.com/_/eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpbSI6WyJcL2FydHdvcmtcL3NoYXJlSW1hZ2VGaWxlXC9kcHhyM2czdjRhYXRoMTguanBnIiwicmVzaXplQ3JvcCw2MDAsMzAwLENST1BfQkFMQU5DRSJdfQ.ZWWoFjH8cEHr03TizDbQ8UY5lyQM7jtvQejo_2R9/bIQ.jpg">
+        <p>
+            Hi! My name is Alexis Alfaro, I'm a Mecatronics Engineer from Guadalajara, Jalisco, I want to
+            become a Software Engineer, that's why I'm taking this course, and I'm really enjoying it!
+        </p>
+
         <h2>Skills</h2>
         <h2>Projects</h2>
         <h2>Recommendations</h2>
