Add my list of skills with logo and style the logo

--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -22,6 +22,27 @@
         </p>
 
         <h2>Skills</h2>
+        <p>
+            I have acquired the following skills during my career:
+            <ul>
+                <li>HTML
+                    <img src="https://shorturl.at/mrLFZ" class="logo-list">
+                 </li>
+                <li>CSS
+                    <img src="https://shorturl.at/nAZ4b" class="logo-list">
+                </li>
+                <li>Javascript
+                    <img src="https://shorturl.at/z4OPb" class="logo-list">
+                </li>
+                <li>Python
+                    <img src="https://shorturl.at/b0x8A" class="logo-list">
+                </li>
+                <li>Git & Github
+                    <img src="https://tinyurl.com/ynu2y73a" class="logo-list">
+                </li>
+            </ul>
+        </p>
+
         <h2>Projects</h2>
         <h2>Recommendations</h2>
     </body>
