Add the final points of the page

--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -44,7 +44,15 @@
         </p>
 
         <h2>Projects</h2>
+        <ul>
+            <li>Too many to type!</li>
+        </ul>
+
         <h2>Recommendations</h2>
+        <ul>
+            <li>Intel</li>
+            <li>IBM</li>
+        </ul>
     </body>
 
 </html>
