--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -36,17 +36,18 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif" class="profile_image"/>
+        <img src="html_finalprojimages/fallen.jpg" class="profile_image"/>
       </div>
 
       <div>
           <h1>
-            Hi, I'm Jane Doe! <img src="html_finalprojimages/waving-hand.png" width="60px"/>
+            Hi, I'm Alexis Alfaro! <img src="html_finalprojimages/waving-hand.png" width="50px"/>
           </h1>
           <p>
-            I am a full stack developer with 2 years of experience in both application and presentation layers.
-            I have worked on applications and microservices deployed on IBM Cloud. 
-            I am an avid user of IBM Watson Services and have worked on Watson Assistant, NLU, Sentiment analyzer to name a few.
+            I am a mecathronics engineer, I have three years of experience in 
+            companies like IBM and intel, as a validation engineer and QA.
+            My passion is the software, so that's why I want to be a full stack
+            web software engineer!
           </p>
       </div>
     </section>
