Change the skills sections of the web page

--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -58,17 +58,42 @@
       <div style="clear:both;"></div>
 
       <div class="all_skills">
+
+        <div class="skill">
+          <img src="html_finalprojimages/python-logo.png"/>
+          <h6>Python</h6>
+          <p>3 years experience</p>
+        </div>
+        
+        <div class="skill">
+          <img src="html_finalprojimages/git-logo.png"/>
+          <h6>Git</h6>
+          <p>2 years experience</p>
+        </div>
+
         <div class="skill">
           <img src="html_finalprojimages/html5.png"/>
           <h6>HTML</h6>
-          <p>2 years experience</p>
+          <p>1 years experience</p>
         </div>  
 
         <div class="skill">
           <img src="html_finalprojimages/js.jpeg"/>
           <h6>JavaScript</h6>
-          <p>3 years experience</p>
-        </div>  
+          <p>1 years experience</p>
+        </div> 
+
+        <div class="skill">
+          <img src="html_finalprojimages/css-logo.png"/>
+          <h6>CSS</h6>
+          <p>1 years experience</p>
+        </div> 
+        
+        <div class="skill">
+          <img src="html_finalprojimages/kotlin-logo.png"/>
+          <h6>Kotlin</h6>
+          <p>1 years experience</p>
+        </div> 
 
         <!-- Add more skills here -->
 
