Change the projects section

--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -110,23 +110,30 @@
 
         <div id="projects-container" class="projects-container">
           <div class="project-card">
-            <h3>Chatbot</h3>
+            <h3>Financial app</h3>
             <ul>
-              <li>Developed a secure website integrated with chatbot for an automobile client using HTML, CSS, JavaScript and IBM Watson Assistant</li>
+              <li>
+                Developed a secure website that stores your financial information and makes a summary
+                of your expenses, income and investment profits.
+              </li>
             </ul>
           </div>
           <hr>
           <div class="project-card">
-            <h3>Sentiment Analyzer</h3>
+            <h3>Habit tracker</h3>
             <ul>
-              <li>Developed and deployed a sentiment analyzer for the box reviews section of an eCommerce platform using IBM NLU</li>
+              <li>Developed an application that tracks your habits, sending notifications
+                and keeping score so you can feel proud of your improvements.
+              </li>
             </ul>
           </div>
           <hr>
           <div class="project-card">
-            <h3>Fashion Website</h3>
+            <h3>The Oracle</h3>
             <ul>
-              <li>Created a styled multi-page website for a new player in the fashion industry and integrated it with a shopping cart, using stripe for payment gateway</li>
+              <li>
+                Developed an Artificial Intelligence that helps people programming easily.
+              </li>
             </ul>
           </div>
     </div>
