Change the recommendation section

--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -147,24 +147,23 @@
       <div class="all_recommendations" id="all_recommendations">
         <div class="recommendation">
           <span>&#8220;</span>
-          Jane is a very quick learner and quickly grasps key concepts of Web development. 
-          She got a great attitude & she is an excellent team player. 
-          She has a curious mind and asks the right question. 
-          She takes initiative within a team and has potentials to lead the team.
+          Alexis consistently took responsibility for complex projects, meeting deadlines with
+          high quality. Their proactive solutions increased team efficiency by 20%, anticipating
+         challenges and acting quickly. A true asset
           <span>&#8221;</span>
         </div>
         <div class="recommendation">
           <span>&#8220;</span>
-          Working with Jane has been an awesome experience. 
-          She is highly knowledgable and always goes the extra step to make sure everything is right. 
-          For any future projects that need her expertise I would definitely want to work with her again.
+          Alexis demonstrated a genuine passion for coding, tackling challenging problems with enthusiasm.
+          They regularly shared insights, driving continuous learning and fostering innovation within 
+          the team. Highly motivated and skilled
           <span>&#8221;</span>
         </div>
         <div class="recommendation">
           <span>&#8220;</span>
-          I had worked along with Jane during the initial phase of our venture which needed Web development. 
-          She is a committed resource who has in depth knowledge about the domain. 
-          She will be an asset for any organisation! 
+          Alexis excelled in fostering collaboration, ensuring all team members’ voices were heard.
+          They organized brainstorming sessions that led to breakthrough solutions, earning respect
+          as a natural leader 
           <span>&#8221;</span>
         </div>
       </div>
