Add a confirmation pop up when adding a comment

--- a/course-3/final-project.html
+++ b/course-3/final-project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jane Doe - Portfolio</title>
+    <title>Alexis Alfaro - Portfolio</title>
     <link rel="stylesheet" href="./style.css"/>
     <script src="./script.js"></script>
   </head>
@@ -194,7 +194,7 @@
     <div class="popup" id="popup" class="flex_center">
       <img src="html_finalprojimages/checkmark--outline.svg"/>
       <h3><!-- Add appropriate text here--></h3>
-      <button onclick="showPopup(false)">Ok</button>
+      <button onclick="showPopup(false)">Thanks for leaving a recommendation!</button>
     </div>
   </body>
 </html>
